--- a/package.json
+++ b/package.json
@@ -8,19 +8,30 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test:contracts": "tsx tests/contractTests.ts"
+    "test:contracts": "tsx tests/contractTests.ts",
+    "test:backend": "tsx backend/test-server.ts",
+    "test:correctness": "tsx backend/test-correctness.ts",
+    "test:robustness": "tsx backend/test-robustness.ts",
+    "test:quota": "tsx backend/test-quota.ts",
+    "test:meal-planning": "tsx backend/test-meal-planning.ts"
   },
   "dependencies": {
     "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@tensorflow/tfjs-converter": "^4.22.0",
     "@tensorflow/tfjs-core": "^4.22.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "openai": "^6.9.1",
+    "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
