fix: Properly mount backend routes and start server on port 3001

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ DATABASE_URL=postgresql://postgres:password@localhost:5432/coach_nutrition
 
 # AI Provider Selection (set ONE to true)
 USE_OPENAI=false
-USE_OPENROUTER=true
-USE_OLLAMA=false
+USE_OPENROUTER=false
+USE_OLLAMA=true
 
 # OpenAI Configuration
 OPENAI_API_KEY=473f5156003442e1828d4342217e503c.BdUNFwkQ2lNT-DhX867EfoGm
@@ -15,7 +15,7 @@ OPENROUTER_MODEL=anthropic/claude-3.5-sonnet
 
 # Ollama Configuration (local)
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=qwen3-vl:235b-instruct-cloud
+OLLAMA_MODEL=qwen2.5-coder:14b
 OLLAMA_API_KEY=ollama
 
 USE_REAL_AI=true
