--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 DATABASE_URL=postgresql://postgres:password@localhost:5432/coach_nutrition
 
 # AI Provider Selection (set ONE to true)
-USE_OPENAI=false
+USE_OPENAI=true
 USE_OPENROUTER=false
-USE_OLLAMA=true
+USE_OLLAMA=false
 
 # OpenAI Configuration
-OPENAI_API_KEY=473f5156003442e1828d4342217e503c.BdUNFwkQ2lNT-DhX867EfoGm
+OPENAI_API_KEY=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
 OPENAI_MODEL=gpt-4o-mini
 
 # OpenRouter Configuration
@@ -15,8 +15,8 @@ OPENROUTER_MODEL=anthropic/claude-3.5-sonnet
 
 # Ollama Configuration (local)
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=qwen2.5-coder:14b
-OLLAMA_API_KEY=ollama
+OLLAMA_MODEL=gpt-oss:120b-cloud
+OLLAMA_API_KEY=473f5156003442e1828d4342217e503c.BdUNFwkQ2lNT-DhX867EfoGm
 
 USE_REAL_AI=true
 
